# dl-from-scratch

./: .gitattributes  .gitignore  README.md  ROADMAP.md  main.py  pyproject.toml
basics/: decision_tree.py  decision_tree.yaml  k_means.ipynb  k_means.py  k_means.yaml  knn.ipynb  knn.py  linear_regression.py  logistic_regression.py  naive_bayes.py  pca.py  perceptron.ipynb  perceptron.py  perceptron.yaml  svm.ipynb  svm.py  tsne.py
cnn/: cnn.ipynb  data.py  eval.py  model.py  train.py
dcgan/: __init__.py  config.yaml  dcgan.ipynb  generate.py  model.py  train.py
ddpm/: __init__.py  config.yaml  generate.py  train.py
dqn/: config.yaml  dqn.ipynb  train.py
gcn/: __init__.py  config.yaml  data.py  eval.py  gcn.ipynb  model.py  train.py
lora/: __init__.py  config.yaml  generate.py  lora.ipynb  model.py  train.py
mlp/: eval.py  train.py
mobilenet/: config.yaml  data.py  eval.py  mobilenet.ipynb  train.py
resnet/: README.md  __init__.py  config.yaml  data.py  eval.py  model.py  train.py
resnet18/: README.md  config.yaml  eval.py  resnet18.ipynb  train.py
resnet34/: config.yaml  data.py  eval.py  model.py  resnet34.ipynb  train.py
resnet50/: config.yaml  data.py  eval.py  model.py  train.py
scripts/: gen_basics_notebooks.py  gen_bert_notebook.py  gen_cnn_notebook.py  gen_dcgan_notebook.py  gen_dqn_notebook.py  gen_gcn_notebook.py  gen_gpt_notebook.py  gen_lora_notebook.py  gen_lstm_notebook.py  gen_mobilenet_notebook.py  gen_resnet18_notebook.py  gen_resnet34_notebook.py  gen_simclr_notebook.py  gen_unet_notebook.py  gen_vit_notebook.py  (+2 more)
unet/: data.py  (+4 more)
(+135 files in other folders)
