[project]
name = "dl-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "pillow>=10.0",
    "numpy",
    "datasets>=5.0.0",
    "pyyaml>=6.0",
    "tensorboard>=2.0",
]
